--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -149,13 +149,57 @@
 /******************************************
   /* MEDIA QUERY
   /*******************************************/
-
-  @media only screen and (max-width: 1024px){
+  @media screen and (min-width: 1025px) and (max-width: 1440px){
     .headerBody, .footerContainer{
-      height: 860px;
+      height: 1325px;
     }
     .headerContainer{
-      padding-top: 27%;
+      padding-top: 30%;
+    }
+    .webName{
+      font-size: 2em;
+    }
+    .title{
+      font-size: 5em;
+    }
+    #getTotalInput{
+      width: 360px;
+      height: 45px;
+      font-size: 1.5em;
+    }
+    .titleContainer{
+      margin: 0;
+    }
+    .footerWebName{
+      font-size: 3em;
+    }
+    .artContainer{
+      margin-top: 15%;
+    }
+    #author{
+      font-size: 4em;
+    }
+    #artTitle, #description{
+      font-size: 1.2em;
+    }
+    .buttons{
+      margin-top: 5%;
+    }
+    #previousArt, #nextArt{
+      padding: 20px 40px;
+      font-size: 1.3em;
+    }
+  }
+  @media only screen and (max-width: 1024px){
+    .headerBody, .footerContainer{
+      height: 1150px;
+    }
+    .headerContainer{
+      padding-top: 35%;
+    }
+    #getTotalInput{
+      width: 290px;
+      font-size: 1.3em;
     }
     .pmImage{
       height: 380px;
@@ -168,14 +212,17 @@
     }
     .artContainer{
       justify-content: space-between;
-      padding-top: 12%;
+      padding-top: 20%;
     }
     #author{
       font-size: 35px;
     }
-  }
+    .footerWebName{
+      padding-top: 5%;
+    }
+}
 
-  @media only screen and (min-width: 768px) and (max-width: 1023px) {
+  @media only screen and (max-width: 1023px) {
     .headerBody, .footerContainer{
       height: 1100px;
     }
@@ -186,17 +233,25 @@
       margin-top: 15%;
     }
   }
-  @media only screen and (max-width: 767px) {
-
+  @media only screen and (max-width: 767px){
+    
     .headerBody{
-      height: 960px;
-      padding-top: 30%;
+      height: 860px;
+      padding-top: 2%;
+    }
+    .webName{
+      font-size: 1.3em;
+      margin-top: 25%;
     }
     .title{
-      font-size: 30px;
+      font-size: 2em;
+      text-align: center;
+    }
+    #getTotalInput{
+      font-size: 1em;
     }
     .footerContainer{
-      height: 960px;
+      height: 860px;
     }
     .artContainer{
       flex-direction: column;
@@ -213,5 +268,8 @@
     }
     .footerWebName{
       padding-top: 15%;
+    }
+    .buttons{
+      margin-top: 2%;
     }
   }
