--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -151,10 +151,10 @@
   /*******************************************/
   @media screen and (min-width: 1025px) and (max-width: 1440px){
     .headerBody, .footerContainer{
-      height: 1325px;
+      height: 1000px;
     }
     .headerContainer{
-      padding-top: 30%;
+      padding-top: 20%;
     }
     .webName{
       font-size: 2em;
@@ -174,7 +174,7 @@
       font-size: 3em;
     }
     .artContainer{
-      margin-top: 15%;
+      margin-top: 5%;
     }
     #author{
       font-size: 4em;
@@ -189,13 +189,16 @@
       padding: 20px 40px;
       font-size: 1.3em;
     }
+    .pmImage{
+      height: 500px;
+    }
   }
-  @media only screen and (max-width: 1024px){
+  @media only screen and (min-width : 769px ) and (max-width: 1024px){
     .headerBody, .footerContainer{
-      height: 1150px;
+      height: 860px;
     }
     .headerContainer{
-      padding-top: 35%;
+      padding-top: 25%;
     }
     #getTotalInput{
       width: 290px;
@@ -212,7 +215,7 @@
     }
     .artContainer{
       justify-content: space-between;
-      padding-top: 20%;
+      padding-top: 10%;
     }
     #author{
       font-size: 35px;
@@ -222,22 +225,38 @@
     }
 }
 
-  @media only screen and (max-width: 1023px) {
+  @media only screen and (min-width : 426px ) and (max-width: 768px) {
     .headerBody, .footerContainer{
-      height: 1100px;
+      height: 860px;
     }
     .headerContainer{
-      padding-top: 45%;
+      padding-top: 35%;
     }
     .buttons{
-      margin-top: 15%;
+      margin-top: 1%;
+    }
+    .artContainer{
+      flex-direction: column;
+      padding: 0;
+    }
+    .imageArtContainer{
+      max-width: 100%;
+    }
+    .authorAndTitleContainer{
+      max-width: 100%;
+    }
+    .descriptionContainer{
+      max-width: 100%;
+    }
+    .pmImage{
+      height: 400px;
     }
   }
-  @media only screen and (max-width: 767px){
+  @media only screen and (min-width: 320px) and (max-width: 425px){
     
     .headerBody{
       height: 860px;
-      padding-top: 2%;
+      padding-top: 30%;
     }
     .webName{
       font-size: 1.3em;
@@ -271,5 +290,11 @@
     }
     .buttons{
       margin-top: 2%;
+    }
+    .pmImage{
+      height: 300px;
+    }
+    #author{
+      font-size: 2.5em;
     }
   }
